need to fix update and routes and wrap text

--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
   background-color: #D34735;
   display: flex;
   flex-direction: column;
-  justify-content: left;
+  justify-content: flex-start;
   align-items: center;
   width: 40vw;
   height:30vh;
@@ -50,10 +50,20 @@
 }
 
 .inventory-text {
-  margin-left: 60px;
+  margin-left: 90px;
   position: relative;
   font-size: 20px;
   font-weight: bolder;
+}
+.inventory-price {
+    margin-left: 10px;
+    position: relative;
+    font-size: 20px;
+    font-weight: bolder;
+  
+}
+.buttons {
+  margin-left: 50px;
 }
 
 .inventory-container img {
@@ -71,10 +81,6 @@
   border: none;
   border-radius: 4px;
   font-weight: bolder;
-}
-
-.inventory-container button:hover {
-  background-color: #ED6B5A;
 }
 
 .inventory-img {
@@ -106,8 +112,9 @@
   color: black;
   background-color: #ED6B5A;
   font-weight: bolder;
+  margin: 10px;
 }
-
-.nav-container button:hover {
-  background-color: #3AD886;
+.nav-container h2 {
+  margin-left: 20px;
+  margin-right: 100px;
 }
